Fix chatbot and CORS configuration